# neoconta

./: .gitignore  INSTRUCCIONES_MIGRACION.txt  NEOCONTA_Reakttor.xlsx  README.md  backup_notebook.ps1  backup_script.ps1  check_env.js  deploy_medical_glossary.js  deploy_recetario.js  next.config.mjs  package-lock.json  package.json  restore_notebook.ps1  restore_pc.ps1  restore_script.ps1  test_wsaa.js  verify_keys.js
.agents/: AGENTS.md
ARCHIVOS GENERALES/: pedido.csr  prueba.xlsx  prueba4sas.crt
app/: globals.css  layout.js  page.js  robots.js  sitemap.js
neoconta-ds/: main.py  pyproject.toml
scratch/: check_build_log.js  check_nginx_config.js  check_remote_file.js  check_remote_health.js  check_remote_page.js  check_vps_recent_logs.js  check_vps_status.js  clean_history.js  deploy_all_audit_changes.js  deploy_commander_changes.js  deploy_dashboard_page.js  deploy_facturacion_page.js  deploy_fast.js  deploy_file_vps.js  deploy_globals_css.js  deploy_performance_fixes.js  deploy_route_vps.js  find_clients_tab.js  find_consolidado.js  find_historial_arca.js  find_owner_dashboard.js  find_role_rendering.js  finish_vps_deployment.js  fix_nginx_config.js  fix_production_build.js  inspect_history.js  list_remote_css.js  list_services.js  run_remote_build.js  run_remote_test_file.js  run_ssh_cmd.js  search_all_facturas_emitidas.js  search_all_files.js  search_cbte.js  search_facturas_emitidas.js  search_filtered_rows.js  search_get_filtered_rows.js  search_latest_invoices.js  search_nginx_css.js  search_nginx_specific_css.js  (+39 more)
scripts/: create_deployment_bundle.ps1  (+35 more)
(+71 files in other folders)
