[project]
name = "neoconta-ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "prophet>=1.3.0",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.48.0",
    "xgboost>=3.2.0",
]
